# Win-ScriptInvoke

./: CMakeLists.txt  LICENSE  README.md  Win-ScriptInvoke.cmd  invoke_perl_shebang.cmd  win_script_invoke.cmd
src/: ClassFactory.cc  ClassFactory.hh  ContextMenu.cc  ContextMenuHandler.cc  ContextMenuHandler.hh  HandlerInfo.cc  InitializeWithStream.cc  ScriptFile.cc  ScriptFile.hh  ShellExtInit.cc  Win-ScriptInvoke.cc  Win-ScriptInvoke.hh  manifest.xml
test/: default_fallback_with_no_shell.pl  default_fallback_with_wrong_shell.pl  ignore_bin_env.cmake  ignore_usr_bin_env.cmake  interpreter_path_without_drive.cmake  interpreter_slash_translation.cmake  invoke_with_arg_separator.sh  run.pl  shell_cmd_with_spaces.cmake  shell_name_and_ext.ruby  shell_name_and_wrong_ext.ruby  shell_wrong_path.ruby  shell_wrong_path_and_ext.ruby  show_cmd_line.cmd
tests/: default_fallback_with_wrong_shell.pl  full_path_no_ext.sh  full_path_with_ext.sh  invoke_with_arg_separator.sh  invoke_with_multiple_args.sh  run.pl  shell_name_and_ext.ruby  shell_name_only.ruby  shellname_cmd_with_spaces.cmake
